# kwc

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  copilot-instructions.md  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  mypy.yml  publish.yml  ruff.yml  test.yml
choose/: admin.py  api.py  apps.py  chooser_services.py  constants.py  folder_utils.py  models.py  services.py  tests.py  urls.py  utils.py  views.py  views.py.backup
choose/migrations/: 0001_initial.py  0002_folderprogress.py
choose/tests/: __init__.py  test_api.py  test_delete_folder.py  test_inbox_routes.py  test_services.py  test_utils.py  test_views.py
common/: models.py  thumbnails.py  utils.py  version_utils.py
deploy/: nginx.conf  run
extract/: __init__.py  admin.py  apps.py  deduplication.py  extract.py  extractor.py  forms.py  job_runner.py  models.py  tests.py  tmdb.py  urls.py  utils.py  views.py
extract/migrations/: 0001_initial.py  0002_extractionjob_name.py  0003_alter_extractionjob_status.py  0004_alter_extractionjob_status.py  0005_alter_extractionjob_status.py
extract/templatetags/: naming.py
extract/tests/: test_cancel.py  test_cover_start.py  test_deduplication.py  test_extractor.py  test_folders_api.py  test_job_runner.py  test_tmdb.py  test_views.py  test_worker_selection.py
gallery/: services.py  urls.py  utils.py  views.py
gallery/tests/: test_views.py
kwc/: asgi.py  context_processors.py  main.py  settings.py  urls.py  views.py  wsgi.py
kwc/extract/: __init__.py  extract.py  extract_custom.py  extract_ffmpeg.py  utils.py
kwc/select/: __init__.py  actionbar.py  application.py  constants.py  dialogs.py  select.py  (+5 more)
recommend/: models.py  services.py  utils.py
templates/: base.html  home.html  offline.html
(+41 files in other folders)
