[project]
name = "kwc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2.7",
    "guessit>=3.8.0",
    "python-ffmpeg>=2.0.12",
    "python-dotenv>=1.0.1",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
]
prod = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kwc.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
